--- a/index.html
+++ b/index.html
@@ -3,19 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Perusahaan XYZ</title>
+  <title>Curriculum Vitae</title>
+  <!-- Sertakan file Bootstrap CSS -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
+<body>
+
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        <div class="card">
+          <div class="card-header bg-primary text-white">
+            <h2 class="text-center">Curriculum Vitae</h2>
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">Nama Lengkap</h4>
+            <p class="card-text">Alamat: Alamat Anda</p>
+            <p class="card-text">Telepon: Nomor Telepon Anda</p>
+            <p class="card-text">Email: Email Anda</p>
+
+            <h4 class="mt-4">Pendidikan</h4>
+            <ul>
+              <li>Sarjana, Jurusan, Universitas, Tahun</li>
+              <li>SMA/SMK, Sekolah, Tahun</li>
+            </ul>
+
+            <h4 class="mt-4">Pengalaman Kerja</h4>
+            <p>Nama Perusahaan - Posisi - Tahun</p>
+            <p>Nama Perusahaan - Posisi - Tahun</p>
+
+            <h4 class="mt-4">Keterampilan</h4>
+            <ul>
+              <li>Keterampilan 1</li>
+              <li>Keterampilan 2</li>
+              <li>Keterampilan 3</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Sertakan file Bootstrap JS (Popper.js dan jQuery juga diperlukan) -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
-</header>
-</h1>Selamat Datang di Perusahaan XYZ</h1>
-</Header>
-</nav>
-</ul>
-</li><a href="index.html">Halaman Utama</a></li>
-</li><a href="profile.html">Profile</a></li>
-</li><a href="kontak.html">Kontak</a></li>
-</ul>
-</nav>
-</h2>Selamat datang di perusahaan XYZ</html>
-</p>Kami adalah perusahaan yang bergerak di bidang...</p>
-<img src="logo.png"alt="Logo Perusahaan XYZ"
+</html>
