--- a/profile.html
+++ b/profile.html
@@ -1,28 +1,52 @@
-<div class="header">
-    <h1>Profile</h1>
-    <p>Resize the browser window to see the effect.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Curriculum Vitae</title>
+  <!-- Sertakan file Bootstrap CSS -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        <div class="card">
+          <div class="card-header bg-primary text-white">
+            <h2 class="text-center">Curriculum Vitae</h2>
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">Nama Lengkap</h4>
+            <p class="card-text">Alamat: Alamat Anda</p>
+            <p class="card-text">Telepon: Nomor Telepon Anda</p>
+            <p class="card-text">Email: Email Anda</p>
+
+            <h4 class="mt-4">Pendidikan</h4>
+            <ul>
+              <li>Sarjana, Jurusan, Universitas, Tahun</li>
+              <li>SMA/SMK, Sekolah, Tahun</li>
+            </ul>
+
+            <h4 class="mt-4">Pengalaman Kerja</h4>
+            <p>Nama Perusahaan - Posisi - Tahun</p>
+            <p>Nama Perusahaan - Posisi - Tahun</p>
+
+            <h4 class="mt-4">Keterampilan</h4>
+            <ul>
+              <li>Keterampilan 1</li>
+              <li>Keterampilan 2</li>
+              <li>Keterampilan 3</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  
-  <div class="topnav">
-    <a href="index.html">Home</a>
-    <a href="profil.html">Profile></a>
-    <a href="galeri.html">Kontak</a>
-    <a href="#" style="float:right">Link</a>
-  
-  </div>
-  
-  <div class="row">
-    <div class="leftcolumn">
-      <div class="card">
-        <h2>visi Dan Misi</h2>
-        <table>
-        <link rel="stylesheet"href
-      </tr>
-      </th>VISI</th>
-      </td>Menjadi perusahaan terpercaya dalam memberikan solusi yang cerdas dan tepat di bidang teknologi informasi.</td>
-      </tr>
-      </td>Menyediakan produk dan solusi yang berkualitas, efisien, layanan paripurna dan dukungan yang penuh terhadap produk dan layanan yang diberikan.</td>
-</tr>
-</div>
+
+  <!-- Sertakan file Bootstrap JS (Popper.js dan jQuery juga diperlukan) -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
