--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
           </div>
           <div class="card-body text-center">
             <img src="path-to-your-profile-image.jpg" alt="Profile Picture" class="profile-img mb-4">
-            <h4 class="card-title">Nama Lengkap</h4>
-            <p class="card-text">Alamat: Alamat Anda</p>
-            <p class="card-text">Telepon: Nomor Telepon Anda</p>
-            <p class="card-text">Email: Email Anda</p>
+            <h4 class="card-title">SURYO ABI IMANSYAH</h4>
+            <p class="card-text">Alamat: LINK. PEGANTUNGAN BARU</p>
+            <p class="card-text">Telepon: 08998841519</p>
+            <p class="card-text">Email: suryoabi768@gmail.com</p>
 
             <h4 class="mt-4">Pendidikan</h4>
             <ul class="list-group">
-              <li class="list-group-item">Sarjana, Jurusan, Universitas, Tahun</li>
-              <li class="list-group-item">SMA/SMK, Sekolah, Tahun</li>
+              <li class="list-group-item">Sarjana, Jurusan, Universitas PGRI BANTEN, Tahun 2025</li>
+              <li class="list-group-item">SMA/SMK FATAHILLAH 1 CILEGON, Sekolah, Tahun 2019</li>
             </ul>
 
             <h4 class="mt-4">Pengalaman Kerja</h4>
