--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Curriculum Vitae</h2>
           </div>
           <div class="card-body text-center">
-            <img src="path-to-your-profile-image.jpg" alt="Profile Picture" class="profile-img mb-4">
+            <img src=".profil-img" alt="Profile Picture" class="profile-img mb-4">
             <h4 class="card-title">SURYO ABI IMANSYAH</h4>
             <p class="card-text">Alamat: LINK. PEGANTUNGAN BARU</p>
             <p class="card-text">Telepon: 08998841519</p>
