--- a/profile.html
+++ b/profile.html
@@ -27,8 +27,8 @@
           <div class="card-header bg-primary text-white text-center">
             <h2>Curriculum Vitae</h2>
           </div>
-           <div class="card-body text-center">
-            <img src="path-to-your-profile-image.jpg" alt="Profile Picture" class="profile-img mb-4">
+          <div class="card-body text-center">
+            <img src=".profil-img" alt="Profile Picture" class="profile-img mb-4">
             <h4 class="card-title">SURYO ABI IMANSYAH</h4>
             <p class="card-text">Alamat: LINK. PEGANTUNGAN BARU</p>
             <p class="card-text">Telepon: 08998841519</p>
@@ -39,6 +39,7 @@
               <li class="list-group-item">Sarjana, Jurusan, Universitas PGRI BANTEN, Tahun 2025</li>
               <li class="list-group-item">SMA/SMK FATAHILLAH 1 CILEGON, Sekolah, Tahun 2019</li>
             </ul>
+
             <h4 class="mt-4">Pengalaman Kerja</h4>
             <p class="card-text">Nama Perusahaan - Posisi - Tahun</p>
             <p class="card-text">Nama Perusahaan - Posisi - Tahun</p>
