--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@
             <h2>Curriculum Vitae</h2>
           </div>
           <div class="card-body text-center">
-            <img src="WhatsApp Image 2024-01-03 at 17.00.00.jpeg" alt="Profile Picture" class="profile-img mb-4">
+            <img src="WhatsApp Image 2024-01-03 at 17.00.00.jpeg" alt="" class="">
             <h4 class="card-title">SURYO ABI IMANSYAH</h4>
             <p class="card-text">Alamat: LINK. PEGANTUNGAN BARU</p>
             <p class="card-text">Telepon: 08998841519</p>
