--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body {
       background-color: #f8f9fa;
     }
-    .profile-img {
+    .profile-img {WhatsApp Image 2024-01-03 at 17.00.00.jpeg
       border-radius: 50%;
       max-width: 150px;
     }
