--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
     body {
       background-color: #f8f9fa;
     }
-    .profile-img {
+    .profile-img {WhatsApp Image 2024-01-03 at 17.00.00.jpeg
       border-radius: 50%;
       max-width: 150px;
     }
@@ -67,4 +67,3 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
-
