--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body {
       background-color: #f8f9fa;
     }
-    .profile-img {WhatsApp Image 2024-01-03 at 17.00.00.jpeg
+    .profile-img {
       border-radius: 50%;
       max-width: 150px;
     }
@@ -28,7 +28,7 @@
             <h2>Curriculum Vitae</h2>
           </div>
           <div class="card-body text-center">
-            <img src="WhatsApp Image 2024-01-03 at 17.00.00.jpeg" alt="" class="">
+            <img src="<img alt="" class="xz74otr xf1ldfh x131esax xdajt7p xxfnqb6 xhaqhkv x1pt367s" referrerpolicy="origin-when-cross-origin" src="https://scontent.xx.fbcdn.net/v/t1.15752-9/411675802_902579914672063_4686748286419299538_n.jpg?stp=dst-jpg_p180x540&amp;_nc_cat=100&amp;ccb=1-7&amp;_nc_sid=510075&amp;_nc_ohc=IxfMu6tDT7MAX8Rlosr&amp;_nc_ad=z-m&amp;_nc_cid=0&amp;_nc_ht=scontent.xx&amp;oh=03_AdSLMhk4rt3uKfVsvX1fzmcKaFdpHW9e2lhOW7LI5qhJvQ&amp;oe=65BC9CFD">" alt="" class="">
             <h4 class="card-title">SURYO ABI IMANSYAH</h4>
             <p class="card-text">Alamat: LINK. PEGANTUNGAN BARU</p>
             <p class="card-text">Telepon: 08998841519</p>
