--- a/profile.html
+++ b/profile.html
@@ -34,8 +34,8 @@
 
             <h4 class="mt-4">Pendidikan</h4>
             <ul class="list-group">
-              <li class="list-group-item">Sarjana, Jurusan, Universitas PGRI BANTEN, Tahun 2025</li>
-              <li class="list-group-item">SMA/SMK FATAHILLAH 1 CILEGON, Sekolah, Tahun 2019</li>
+              <li class="list-group-item">Sarjana BISNIS DIGITAL Universitas PGRI BANTEN, Tahun 2025</li>
+              <li class="list-group-item">SMA/SMK FATAHILLAH 1 CILEGON,Tahun 2019</li>
             </ul>
 
             <h4 class="mt-4">Pengalaman Kerja</h4>
