--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Curriculum Vitae</h2>
           </div>
           <div class="card-body text-center">
-           <img src="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="WhatsApp Image 2024-01-03 at 17.00.00.jpeg">
+            <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/4116758…t3uKfVsvX1fzmcKaFdpHW9e2lhOW7LI5qhJvQ&oe=65BC9CFD>
             <h4 class="card-title">SURYO ABI IMANSYAH</h4>
             <p class="card-text">Alamat: LINK. PEGANTUNGAN BARU</p>
             <p class="card-text">Telepon: 08998841519</p>
