--- a/index.html
+++ b/index.html
@@ -1,69 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Curriculum Vitae</title>
-  <!-- Sertakan file Bootstrap CSS -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Sertakan font Awesome untuk ikon -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <style>
-    body {
-      background-color: #f8f9fa;
-    }
-    .profile-img {
-      border-radius: 50%;
-      max-width: 150px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curriculum Vitae</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 50%;
+        }
+    </style>
 </head>
 <body>
 
-  <div class="container mt-5">
-    <div class="row">
-      <div class="col-md-8 offset-md-2">
-        <div class="card">
-          <div class="card-header bg-primary text-white text-center">
-            <h2>Curriculum Vitae</h2>
-          </div>
-          <div class="card-body text-center">
-           <div role="button" class="x1qjc9v5 x972fbf xcfux6l x1qhh985 xm0m39n x9f619 x78zum5 xdt5ytf x2lah0s xk390pu xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1n2onr6 xggy1nq x11njtxf" tabindex="0"><div><div class="_aagu _aato"><div class="_aagv" style="padding-bottom: 125%;"><img class="x5yr21d xu96u03 x10l6tqk x13vifvy x87ps6o xh8yej3" crossorigin="anonymous" decoding="auto" sizes="335px" srcset="https://scontent.cdninstagram.com/v/t51.2885-15/318581792_488133903384943_2134925486436150662_n.webp?stp=dst-jpg_e35&amp;efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xMDgweDEzNTAuc2RyIn0&amp;_nc_ht=scontent.cdninstagram.com&amp;_nc_cat=107&amp;_nc_ohc=xGdX3DKrkpAAX-2iDOt&amp;edm=APs17CUBAAAA&amp;ccb=7-5&amp;ig_cache_key=Mjk4OTIzNTcyOTMzMjc2MDM5MQ%3D%3D.2-ccb7-5&amp;oh=00_AfBNKL9BdJIQ7YqnWnBFLz3W1kYXX9cdhrIHwIg6EpLabw&amp;oe=6597F604&amp;_nc_sid=10d13b 1080w,https://scontent.cdninstagram.com/v/t51.2885-15/318581792_488133903384943_2134925486436150662_n.webp?stp=dst-jpg_e35_p720x720&amp;efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xMDgweDEzNTAuc2RyIn0&amp;_nc_ht=scontent.cdninstagram.com&amp;_nc_cat=107&amp;_nc_ohc=xGdX3DKrkpAAX-2iDOt&amp;edm=APs17CUBAAAA&amp;ccb=7-5&amp;ig_cache_key=Mjk4OTIzNTcyOTMzMjc2MDM5MQ%3D%3D.2-ccb7-5&amp;oh=00_AfDIQrsT1fpZiGnnisI7ojRrk0s5tEvZU7zKGXdDIS1fHw&amp;oe=6597F604&amp;_nc_sid=10d13b 720w,https://scontent.cdninstagram.com/v/t51.2885-15/318581792_488133903384943_2134925486436150662_n.webp?stp=dst-jpg_e35_p640x640_sh0.08&amp;efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xMDgweDEzNTAuc2RyIn0&amp;_nc_ht=scontent.cdninstagram.com&amp;_nc_cat=107&amp;_nc_ohc=xGdX3DKrkpAAX-2iDOt&amp;edm=APs17CUBAAAA&amp;ccb=7-5&amp;ig_cache_key=Mjk4OTIzNTcyOTMzMjc2MDM5MQ%3D%3D.2-ccb7-5&amp;oh=00_AfBT0oga5Dr-A1vylzfBsPbfTIMSL9nvb-kNrYof21H58g&amp;oe=6597F604&amp;_nc_sid=10d13b 640w,https://scontent.cdninstagram.com/v/t51.2885-15/318581792_488133903384943_2134925486436150662_n.webp?stp=dst-jpg_e35_p480x480&amp;efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xMDgweDEzNTAuc2RyIn0&amp;_nc_ht=scontent.cdninstagram.com&amp;_nc_cat=107&amp;_nc_ohc=xGdX3DKrkpAAX-2iDOt&amp;edm=APs17CUBAAAA&amp;ccb=7-5&amp;ig_cache_key=Mjk4OTIzNTcyOTMzMjc2MDM5MQ%3D%3D.2-ccb7-5&amp;oh=00_AfAh36AqpygcUdHi1E8-79DLR-x32DWRM1j2I9GlahdciQ&amp;oe=6597F604&amp;_nc_sid=10d13b 480w,https://scontent.cdninstagram.com/v/t51.2885-15/318581792_488133903384943_2134925486436150662_n.webp?stp=dst-jpg_e35_p320x320&amp;efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xMDgweDEzNTAuc2RyIn0&amp;_nc_ht=scontent.cdninstagram.com&amp;_nc_cat=107&amp;_nc_ohc=xGdX3DKrkpAAX-2iDOt&amp;edm=APs17CUBAAAA&amp;ccb=7-5&amp;ig_cache_key=Mjk4OTIzNTcyOTMzMjc2MDM5MQ%3D%3D.2-ccb7-5&amp;oh=00_AfBu2zkdZB_NnFyqMyCfuWCO1goqOzQ643vbuCs3kjJTaA&amp;oe=6597F604&amp;_nc_sid=10d13b 320w,https://scontent.cdninstagram.com/v/t51.2885-15/318581792_488133903384943_2134925486436150662_n.webp?stp=dst-jpg_e35_p240x240&amp;efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xMDgweDEzNTAuc2RyIn0&amp;_nc_ht=scontent.cdninstagram.com&amp;_nc_cat=107&amp;_nc_ohc=xGdX3DKrkpAAX-2iDOt&amp;edm=APs17CUBAAAA&amp;ccb=7-5&amp;ig_cache_key=Mjk4OTIzNTcyOTMzMjc2MDM5MQ%3D%3D.2-ccb7-5&amp;oh=00_AfDQVKJkeXX1weGXOe2fUYzEpENcTsvsX15wZ3n4A2EsHQ&amp;oe=6597F604&amp;_nc_sid=10d13b 240w" src="https://scontent.cdninstagram.com/v/t51.2885-15/318581792_488133903384943_2134925486436150662_n.webp?stp=dst-jpg_e35&amp;efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xMDgweDEzNTAuc2RyIn0&amp;_nc_ht=scontent.cdninstagram.com&amp;_nc_cat=107&amp;_nc_ohc=xGdX3DKrkpAAX-2iDOt&amp;edm=APs17CUBAAAA&amp;ccb=7-5&amp;ig_cache_key=Mjk4OTIzNTcyOTMzMjc2MDM5MQ%3D%3D.2-ccb7-5&amp;oh=00_AfBNKL9BdJIQ7YqnWnBFLz3W1kYXX9cdhrIHwIg6EpLabw&amp;oe=6597F604&amp;_nc_sid=10d13b" style="object-fit: cover;"></div><div class="_aagw"></div></div></div></div>
-            <h4 class="card-title">SURYO ABI IMANSYAH</h4>
-            <p class="card-text">Alamat: LINK. PEGANTUNGAN BARU</p>
-            <p class="card-text">Telepon: 08998841519</p>
-            <p class="card-text">Email: suryoabi768@gmail.com</p>
+<h1>Curriculum Vitae</h1>
 
-            <h4 class="mt-4">Pendidikan</h4>
-            <ul class="list-group">
-              <li class="list-group-item">Sarjana BISNIS DIGITAL Universitas PGRI BANTEN, Tahun 2025</li>
-              <li class="list-group-item">SMA/SMK FATAHILLAH 1 CILEGON,Tahun 2019</li>
-            </ul>
+<!-- Foto profil dari Instagram (ganti dengan URL foto profil Anda) -->
+<img src="https://www.instagram.com/{username}/media/" alt="Foto Profil">
 
-            <h4 class="mt-4">Pengalaman Kerja</h4>
-            <p class="card-text">Nama Perusahaan - Posisi - Tahun</p>
-            <p class="card-text">Nama Perusahaan - Posisi - Tahun</p>
+<h2>Data Pribadi</h2>
+<p>Nama: John Doe</p>
+<p>Alamat: Jalan Contoh No. 123, Kota Contoh</p>
+<!-- Informasi lainnya -->
 
-            <h4 class="mt-4">Keterampilan</h4>
-            <ul class="list-group">
-              <li class="list-group-item">Keterampilan 1</li>
-              <li class="list-group-item">Keterampilan 2</li>
-              <li class="list-group-item">Keterampilan 3</li>
-            </ul>
+<h2>Pendidikan</h2>
+<p>Gelar Sarjana, Universitas Contoh, Tahun</p>
+<!-- Informasi pendidikan lainnya -->
 
-            <div class="mt-4">
-              <a href="#" class="btn btn-primary mr-2"><i class="fab fa-linkedin"></i> LinkedIn</a>
-              <a href="#" class="btn btn-info"><i class="fab fa-twitter"></i> Twitter</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<h2>Pengalaman Kerja</h2>
+<p>Posisi, Perusahaan Contoh, Tahun</p>
+<!-- Pengalaman kerja lainnya -->
 
-  <!-- Sertakan file Bootstrap JS (Popper.js dan jQuery juga diperlukan) -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<!-- Informasi lainnya seperti keahlian, sertifikasi, proyek, dll. -->
+
 </body>
 </html>
