--- a/index.html
+++ b/index.html
@@ -1,45 +1,120 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Vitae</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        h1, h2 {
-            color: #333;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 50%;
-        }
-    </style>
+<html>
+<head >
+<title>CURRICULUM VITAE</title>
+<style type="text/css">
+h1{
+background-color: blue;
+padding: 4px;
+}
+h2{
+color: white;
+background-color: black;
+padding: 3px;
+}
+.menu {
+text-align: center;
+background-color: black;
+font-size:18px;
+padding-top: 16pt;
+}
+.button {
+background-color: white;
+padding: 5px;
+border-color: black;
+text-decoration: none;
+}
+.button:hover {
+background-color: blue;
+}
+</style>
 </head>
 <body>
-
-<h1>Curriculum Vitae</h1>
-
-<!-- Foto profil dari Instagram (ganti dengan URL foto profil Anda) -->
-<img src="https://www.instagram.com/{username}/media/" alt="Foto Profil">
-
-<h2>Data Pribadi</h2>
-<p>Nama: John Doe</p>
-<p>Alamat: Jalan Contoh No. 123, Kota Contoh</p>
-<!-- Informasi lainnya -->
-
-<h2>Pendidikan</h2>
-<p>Gelar Sarjana, Universitas Contoh, Tahun</p>
-<!-- Informasi pendidikan lainnya -->
-
-<h2>Pengalaman Kerja</h2>
-<p>Posisi, Perusahaan Contoh, Tahun</p>
-<!-- Pengalaman kerja lainnya -->
-
-<!-- Informasi lainnya seperti keahlian, sertifikasi, proyek, dll. -->
-
-</body>
-</html>
+<div class="menu">
+<a href="#1" class="button">Profile</a>
+<a href="#2" class="button">Education</a>
+<a href="#3" class="button">Expertise</a>
+<a href="#4" class="button">Experience</a>
+<a href="#5" class="button">Contack</a>
+<br><br>
+</div>
+<h1 align="center">CURRICULUM VITAE</h1>
+<table align="center" border="1">
+<tr><td colspan="2" bgcolor="#fff000"><img src="Rizka3.jpg" width="325px" height="200px" border="2"></td></tr>
+<tr align="center">
+<td> 0896-5478-1843 </td>
+<td> rizkachoirunnisa95@gmail.com </td></tr>
+</table>
+<h2 id="1">PROFILE</h2>
+<table align="center">
+<tr>
+<td width="1%">Name</td>
+<td width="10%">: Rizka Choirunnisa</td>
+</tr>
+<tr>
+<td width="1%">Place of Birth</td>
+<td width="10%">: Cilegon</td>
+</tr>
+<tr>
+<td width="1%">Date of Birth</td>
+<td width="10%">: 09 Agustus 2004</td>
+</tr>
+<tr>
+<td width="1%">Adress</td>
+<td width="10%">: Jln. Santani Link.Leuweung sawo blok bango Rt:004 Rw:009 Kelurahan Kota bumi,Kecamatan Purwakarta,Kota Cilegon,Banten 42443</td>
+</tr>
+</table>
+<h2 id="2">EDUCATION</h2>
+<table align="center">
+<tr>
+<td width="1%">University</td>
+<td width="10%">: Politeknik PGRI Banten </td>
+</tr>
+<tr>
+<td width="1%">Department</td>
+<td width="10%">: Bisnis Digital</td>
+</tr>
+<tr>
+<td width="1%">IPK</td>
+<td width="10%">: 3,53</td>
+</tr>
+</table>
+<h2 id="3">EXPERTISE</h2>
+<table align="center">
+<tr>
+<td width="1%">Digital Marketing</td>
+<td width="10%">: Marketing Management,Supply Chain Management</td>
+</tr>
+<tr>
+<td width="1%">Web Development</td>
+<td width="10%">: HTML, CSS, JavaScript, Bootstrap, Codeigniter, Laravel, Etc.</td>
+</tr>
+<tr>
+<td width="1%">Others</td>
+<td width="10%">: C#, Java, .NET, Etc.</td>
+</tr>
+</table>
+<h2 id="4">EXPERIENCE</h2>
+<table align="center">
+<tr>
+<td width="1%">Hanana99</td>
+<td width="10%">: karyawan</td>
+</tr>
+</table>
+<h2 id="5">CONTACK</h2>
+<table align="center">
+<tr>
+<td width="1%">Instagram</td>
+<td width="10%">: xzrizkaaa</td>
+</tr>
+<tr>
+<td width="1%">Tiktok</td>
+<td width="10%">: biruuuuuu.3</td>
+</tr>
+</table>
+<footer>
+<p align="center">
+<font align="center" font color="blue">
+<b>Copyright&copy; 2024</b> Created with HTML <a href="https://www.instagram.com/xzrizkaaa/">xzrizkaaa_</a>
+</font>
+</footer>
+</body> </html>
