--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ background-color: blue;
 </div>
 <h1 align="center">CURRICULUM VITAE</h1>
 <table align="center" border="1">
-<tr><td colspan="2" bgcolor="#fff000"><img src="Rizka3.jpg" width="325px" height="200px" border="2"></td></tr>
+<tr><td colspan="2" bgcolor="#fff000"><img src="WhatsApp Image 2024-01-03 at 17.00.00.jpeg" width="325px" height="200px" border="2"></td></tr>
 <tr align="center">
 <td> 0896-5478-1843 </td>
 <td> rizkachoirunnisa95@gmail.com </td></tr>
@@ -60,7 +60,7 @@ background-color: blue;
 </tr>
 <tr>
 <td width="1%">Adress</td>
-<td width="10%">: Jln. Santani Link.Leuweung sawo blok bango Rt:004 Rw:009 Kelurahan Kota bumi,Kecamatan Purwakarta,Kota Cilegon,Banten 42443</td>
+<td width="10%">: LINK. PEGANTUNGAN BARU RT/RW 003/014 kel. jombang wetan kec. jombang</td>
 </tr>
 </table>
 <h2 id="2">EDUCATION</h2>
@@ -96,7 +96,7 @@ background-color: blue;
 <h2 id="4">EXPERIENCE</h2>
 <table align="center">
 <tr>
-<td width="1%">Hanana99</td>
+<td width="1%">PT.BODHI CIPTA</td>
 <td width="10%">: karyawan</td>
 </tr>
 </table>
@@ -104,7 +104,7 @@ background-color: blue;
 <table align="center">
 <tr>
 <td width="1%">Instagram</td>
-<td width="10%">: xzrizkaaa</td>
+<td width="10%">: bimnsyah19</td>
 </tr>
 <tr>
 <td width="1%">Tiktok</td>
@@ -114,7 +114,7 @@ background-color: blue;
 <footer>
 <p align="center">
 <font align="center" font color="blue">
-<b>Copyright&copy; 2024</b> Created with HTML <a href="https://www.instagram.com/xzrizkaaa/">xzrizkaaa_</a>
+<b>Copyright&copy; 2024</b> Created with HTML <a href="https://www.instagram.com/bimnsyah19/">bimnsyah19_</a>
 </font>
 </footer>
 </body> </html>
