--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@ background-color: blue;
 <table align="center" border="1">
 <tr><td colspan="2" bgcolor="#fff000"><img src="WhatsApp Image 2024-01-03 at 17.00.00.jpeg" width="325px" height="200px" border="2"></td></tr>
 <tr align="center">
-<td> 0896-5478-1843 </td>
-<td> rizkachoirunnisa95@gmail.com </td></tr>
+<td> 0899-8841-519 </td>
+<td> suryoabi768@gmail.com </td></tr>
 </table>
 <h2 id="1">PROFILE</h2>
 <table align="center">
 <tr>
 <td width="1%">Name</td>
-<td width="10%">: Rizka Choirunnisa</td>
+<td width="10%">: suryo abi imansyah</td>
 </tr>
 <tr>
 <td width="1%">Place of Birth</td>
@@ -56,7 +56,7 @@ background-color: blue;
 </tr>
 <tr>
 <td width="1%">Date of Birth</td>
-<td width="10%">: 09 Agustus 2004</td>
+<td width="10%">: 19 oktober 2003</td>
 </tr>
 <tr>
 <td width="1%">Adress</td>
