--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ background-color: blue;
 </tr>
 <tr>
 <td width="1%">Place of Birth</td>
-<td width="10%">: Cilegon</td>
+<td width="10%">: BANYUMAS</td>
 </tr>
 <tr>
 <td width="1%">Date of Birth</td>
