--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ background-color: blue;
 <table align="center">
 <tr>
 <td width="1%">Name</td>
-<td width="10%">: suryo abi imansyah</td>
+<td width="10%">: SURYO ABI IMANSYAH</td>
 </tr>
 <tr>
 <td width="1%">Place of Birth</td>
